manifest/pod-example.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: pod
  namespace: default
spec:
  containers:
  - image: nginx
    name: pod
