manifest/service-example.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-service
  namespace: default
spec:
  selector:
    run: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
