manifest/ingressroute-example.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pod-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`pod.jabz.fr`)
    kind: Rule
    services:
    - name: pod-service
      port: 80
  tls: {}
